[gd_scene load_steps=12 format=1]

[ext_resource path="res://sources/scripts/title_screen.gd" type="Script" id=1]
[ext_resource path="res://sources/scripts/title_animation_changer.gd" type="Script" id=2]
[ext_resource path="res://sources/assets/fonts/cartwheel_200.fnt" type="BitmapFont" id=3]
[ext_resource path="res://sources/scripts/load_press_start.gd" type="Script" id=4]
[ext_resource path="res://sources/assets/fonts/cartwheel_40.fnt" type="BitmapFont" id=5]

[sub_resource type="Animation" id=1]

resource/name = "split"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("top_screen:transform/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( 0, -300 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("bottom_screen:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( 0, 300 ) ] }

[sub_resource type="Animation" id=2]

resource/name = "start"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("top_screen/title:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.4, 0.6 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 2, 2 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("top_screen:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 0, 0 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("bottom_screen:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 0, 0 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("top_screen/title:transform/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Vector2( 512, 150 ) ] }
tracks/4/type = "value"
tracks/4/path = NodePath("top_screen/title/Label:visibility/self_opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ 1.0 ] }

[sub_resource type="Animation" id=3]

length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("title/Label:visibility/self_opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1.5, 3 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 1.0, 0.1, 1.0 ] }

[sub_resource type="Animation" id=4]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("title:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.4, 1.1, 1.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ 0.0, 10.0, -10.0, 0.0 ] }

[sub_resource type="Animation" id=5]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("title:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.4, 1.1, 1.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Vector2( 512, 150 ), Vector2( 512, 100 ), Vector2( 512, 200 ), Vector2( 512, 150 ) ] }

[sub_resource type="Animation" id=6]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("press_start:visibility/self_opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5, 1 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 1.0, 0.1, 1.0 ] }

[node name="transition" type="CanvasLayer"]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="animation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/split = SubResource( 1 )
anims/start = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "start"

[node name="top_screen" type="Polygon2D" parent="."]

polygon = Vector2Array( 0, 0, 1024, 0, 1024, 300, 0, 300 )
uv = Vector2Array(  )
color = Color( 0.376648, 0.558798, 0.945313, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
script/script = ExtResource( 2 )

[node name="animation" type="AnimationPlayer" parent="top_screen"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/title_random_1 = SubResource( 3 )
anims/title_random_2 = SubResource( 4 )
anims/title_random_3 = SubResource( 5 )
next/title_random_1 = ""
next/title_random_2 = ""
next/title_random_3 = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="title" type="Node2D" parent="top_screen"]

process/pause_mode = 2
transform/pos = Vector2( 512, 150 )
transform/scale = Vector2( 2, 2 )

[node name="Label" type="Label" parent="top_screen/title"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 544.0
margin/top = 182.0
margin/right = -480.0
margin/bottom = -118.0
custom_fonts/font = ExtResource( 3 )
text = "ButtButt"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="timer" type="Timer" parent="top_screen/title"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[node name="bottom_screen" type="Polygon2D" parent="."]

polygon = Vector2Array( 0, 300, 1024, 300, 1024, 600, 0, 600 )
uv = Vector2Array(  )
color = Color( 0.376471, 0.556863, 0.945098, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
script/script = ExtResource( 4 )

[node name="press_start" type="Label" parent="bottom_screen"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 550.0
margin/right = 1024.0
margin/bottom = 600.0
custom_fonts/font = ExtResource( 5 )
text = "Loading..."
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="keyboard" type="Label" parent="bottom_screen"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 64.0
margin/top = 350.0
margin/right = 512.0
margin/bottom = 500.0
custom_fonts/font = ExtResource( 5 )
text = "KeyBoard Controls :\nArrows -> Move\n    Shift -> Run\n   Space -> Jump"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="mobile" type="Label" parent="bottom_screen"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 576.0
margin/top = 350.0
margin/right = 960.0
margin/bottom = 500.0
custom_fonts/font = ExtResource( 5 )
text = "Mobile Controls :\nTouch either the left or right part of the screen."
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="animation" type="AnimationPlayer" parent="bottom_screen"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/blink = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "blink"

[connection signal="finished" from="animation" to="." method="_on_animation_finished"]

[connection signal="finished" from="top_screen/animation" to="top_screen" method="_on_animation_finished"]

[connection signal="timeout" from="top_screen/title/timer" to="top_screen" method="_on_timer_timeout"]


